@@ -3,7 +3,7 @@ use warnings;
 
 use File::Object;
 use Pod::Example qw(sections);
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
 use Test::NoWarnings;
 
 # Load module.
@@ -34,4 +34,16 @@ is_deeply(
 	\@ret,
 	\@right_ret,
 	'One section from module file.',
+);
+
+# Test.
+@ret = sections($modules_dir->file('Ex4.pm')->s);
+@right_ret = (
+	'EXAMPLE1',
+	'EXAMPLE2',
+);
+is_deeply(
+	\@ret,
+	\@right_ret,
+	'Two sections from module file.',
 );
